Fix direct buffer cleaner issues